# aws-sigv4-c

./: .gitignore  LICENSE  README.md  build_aws_sigv4.sh
aws_sigv4/: CMakeLists.txt
aws_sigv4/lib/: CMakeLists.txt  aws_sigv4.c  aws_sigv4.h  aws_sigv4_common.c  aws_sigv4_common.h
aws_sigv4/tests/: CMakeLists.txt  aws_sigv4_test.c  dummy_test.c
